--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,8 +7,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "test": "vitest",
-    "test:ci": "vitest run --coverage",
+    "test": "vitest run && playwright test",
+    "test:ci": "vitest run --coverage && playwright test --reporter=list",
+    "test:visual": "playwright test",
     "preview": "vite preview",
     "clean": "rimraf dist"
   },
@@ -23,6 +24,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
+    "@playwright/test": "^1.50.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
