--- a/apps/web/tsconfig.node.json
+++ b/apps/web/tsconfig.node.json
@@ -4,9 +4,9 @@
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "moduleResolution": "bundler",
     "noEmit": true,
-    "types": ["node", "vitest/config"]
+    "types": ["node", "vitest/config", "@playwright/test"]
   },
-  "include": ["vite.config.ts", "vitest.config.ts"],
+  "include": ["vite.config.ts", "vitest.config.ts", "playwright.config.ts"],
   "references": [
     { "path": "../../packages/types" },
     { "path": "../../packages/utils" }
