chore: stabilize web build and tests

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,6 +7,10 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "playwright:install": "pnpm exec playwright install --with-deps",
+    "pretest": "pnpm run playwright:install",
+    "pretest:ci": "pnpm run playwright:install",
+    "pretest:visual": "pnpm run playwright:install",
     "test": "vitest run && playwright test",
     "test:ci": "vitest run --coverage && playwright test --reporter=list",
     "test:visual": "playwright test",
