--- a/apps/web/tsconfig.app.json
+++ b/apps/web/tsconfig.app.json
@@ -10,6 +10,13 @@
     "jsx": "react-jsx"
   },
   "include": ["src"],
+  "exclude": [
+    "src/**/*.test.ts",
+    "src/**/*.test.tsx",
+    "src/**/*.spec.ts",
+    "src/**/*.spec.tsx",
+    "tests"
+  ],
   "references": [
     { "path": "../../packages/types" },
     { "path": "../../packages/utils" }
